Fix: Toolbar and content area styles
Prevent layout problems by hiding overflow on toolbars.  Users can always expand the pane to access the toolbar contents.
Relatively position content areas (siblings of toolbars) so that their children can be absolutely positioned in relation to them.

--- a/css/ncoda/toolbars_content_areas.less
+++ b/css/ncoda/toolbars_content_areas.less
@@ -37,6 +37,7 @@
     padding: .5rem;
     background-color: @white;
     border-bottom: solid 1px @gray-lighter;
+    overflow: hidden;
     z-index: 2;
     .global-box-shadow();
 
@@ -48,5 +49,6 @@
     & ~ .nc-content-wrap, & ~ .vida-svg-wrapper, & ~ .vida-svg-overlay {
         height: 100%;
         overflow: scroll;
+        position: relative; // so that children can be absolutely positioned in relation to this
     }
 }
